# peerbanhelper-rust

./: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/pbh-btn/: Cargo.toml
crates/pbh-btn/src/: client.rs  hash.rs  lib.rs  model.rs  online.rs  pow.rs
crates/pbh-config/: Cargo.toml
crates/pbh-config/src/: lib.rs  model.rs  paths.rs
crates/pbh-domain/: Cargo.toml
crates/pbh-domain/src/: ban.rs  error.rs  lib.rs  log.rs  peer.rs  torrent.rs
crates/pbh-downloader/: Cargo.toml
crates/pbh-downloader/src/: lib.rs  manager.rs  qbittorrent.rs
crates/pbh-engine/: Cargo.toml
crates/pbh-engine/src/: auto_range_ban.rs  ban_list.rs  ban_manager.rs  ip_blacklist.rs  ip_rule_list.rs  lib.rs  modules.rs  pcb.rs  ptr_blacklist.rs
crates/pbh-geoip/: Cargo.toml
crates/pbh-geoip/src/: download.rs  lib.rs
crates/pbh-i18n/: Cargo.toml
crates/pbh-i18n/src/: lib.rs
crates/pbh-net/: Cargo.toml
crates/pbh-net/src/: lib.rs
crates/pbh-notify/: Cargo.toml
crates/pbh-notify/src/: lib.rs
crates/pbh-rules/: Cargo.toml
crates/pbh-rules/src/: cache.rs  idle_dos.rs  ip_matcher.rs  lib.rs  matcher.rs  module.rs  multi_dialing.rs
crates/pbh-server/: Cargo.toml
crates/pbh-server/src/: context.rs  logging.rs  main.rs
crates/pbh-storage/: Cargo.toml
crates/pbh-storage/migrations/: 0001_initial.sql
crates/pbh-storage/src/: lib.rs  pcb.rs  repo.rs  rule_sub.rs  swarm.rs
crates/pbh-web/: Cargo.toml
crates/pbh-web/assets/: index.html
crates/pbh-web/src/: btn_manager.rs  envelope.rs  lib.rs  routes.rs  selfupdate.rs
docs/: 01-architecture-analysis.md  01-research-report.md  02-construction-guide.md  02-roadmap.md  02-strategy-and-roadmap.md  03-api-contract.md  03-db-schema.md  04-db-schema.md  05-revised-strategy.md
docs/superpowers/plans/: 2026-06-21-webui-overhaul.md
docs/superpowers/specs/: 2026-06-21-webui-overhaul-design.md
memory/: STATUS.md  最高优先级工作守则.md
memory/changelog/: 2026-06-19-19059ed.md  2026-06-19-1ba3083.md  2026-06-19-263ab7b.md  2026-06-19-305ba0b.md  2026-06-19-51f1511.md  2026-06-19-5755e5e.md  2026-06-19-6b1efde.md  2026-06-19-6ba1aeb.md  2026-06-19-744e226.md  2026-06-19-8bc7acd.md  2026-06-19-8ea5415.md  2026-06-19-9c3246d.md  2026-06-19-b37d686.md  2026-06-19-bf6c6bf.md  2026-06-19-d6d0a65.md  2026-06-19-ee7c2ce.md  2026-06-20-0194fca.md  2026-06-20-151a035.md  2026-06-20-21a8cc7.md  2026-06-20-2b6fde9.md  2026-06-20-2cffb9b.md  2026-06-20-3419875.md  2026-06-20-45727c1.md  2026-06-20-4e554c1.md  2026-06-20-4fad1ff.md  2026-06-20-54be292.md  2026-06-20-553be67.md  2026-06-20-619acc2.md  2026-06-20-71c8511.md  2026-06-20-761f87a.md  2026-06-20-95c6988.md  2026-06-20-c585194.md  2026-06-20-e594012.md  2026-06-21-v0.1.1.md  2026-07-01-9b16695.md  2026-07-02-1a1c9c7.md  2026-07-02-1ba66a3.md  2026-07-02-611fcf0.md
memory/design/: architecture-analysis.md  db-schema.md  roadmap.md
memory/guidelines/: 00-index.md  01-scope-and-decisions.md  02-architecture.md  03-coding-conventions.md  04-workflow.md
memory/test-status/: 已测记录.md  待测报告.md
