# PeerBanHelper-Rust — Cargo workspace
# 见 docs/02-construction-guide.md 的里程碑与 crate 分层。
[workspace]
resolver = "2"
members = [
    "crates/pbh-domain",
    "crates/pbh-config",
    "crates/pbh-storage",
    "crates/pbh-rules",
    "crates/pbh-downloader",
    "crates/pbh-geoip",
    "crates/pbh-engine",
    "crates/pbh-btn",
    "crates/pbh-web",
    "crates/pbh-server",
    "crates/pbh-net",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 遵循上游 PeerBanHelper（PBH-BTN/PeerBanHelper）的 GPL-3.0 许可。
license = "GPL-3.0-or-later"
# 现代依赖（hashbrown 0.17 等）内部用 edition2024,需 cargo/rustc >= 1.85。
# 实测使用 rustup stable 1.96。本仓 edition 仍为 2021。
rust-version = "1.85"

# 统一依赖版本（按需在各 crate 的 [dependencies] 中以 `.workspace = true` 引入）。
# 重型依赖（tokio/axum/sqlx/reqwest）
# 仅在需要它们的 crate 中开启，骨架阶段多数 crate 保持 std-only 以便离线编译。
[workspace.dependencies]
# --- 基础 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }

# --- 异步/网络（M2+ 开启）---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }

# --- 存储（M0/M5）---
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# --- 工具 ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "5"
regex = "1"
sha2 = "0.10"
flate2 = "1"
parking_lot = "0.12"
# IP 前缀 trie（M1）：ip_network_table / treebitmap / iprange —— 选型见 04/01 文档
ip_network_table = "0.2"
# GeoIP（M6）
maxminddb = "0.24"
# DNS（M4）
hickory-resolver = "0.24"
# 内嵌单页前端（M7）
rust-embed = "8"

[profile.release]
opt-level = 3
strip = true
# 刻意不开 lto/codegen-units=1，以缩短构建时间;opt-level=3 运行性能已足够。
# 需要极致体积/性能时再临时加 lto = "thin"、codegen-units = 1。
