[package]
name = "pbh-btn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-rules = { path = "../pbh-rules" }
pbh-storage = { path = "../pbh-storage" }
pbh-net = { path = "../pbh-net" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
