[package]
name = "pbh-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
