[package]
name = "pbh-downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
ipnet = { workspace = true }
semver = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
