[package]
name = "pbh-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-rules = { path = "../pbh-rules" }
pbh-downloader = { path = "../pbh-downloader" }
pbh-config = { path = "../pbh-config" }
pbh-storage = { path = "../pbh-storage" }
ip_network = "0.4"
ip_network_table = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
