[package]
name = "pbh-rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
ip_network = "0.4"
ip_network_table = { workspace = true }
moka = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
