[package]
name = "pbh-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pbh"
path = "src/main.rs"

# 组合根。M0 起引入 tokio / tracing 并真正装配各子系统（依赖抽象、显式注入）。
# 骨架阶段 std-only，仅打印启动横幅并校验各 crate 可链接。
[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-config = { path = "../pbh-config" }
pbh-storage = { path = "../pbh-storage" }
pbh-i18n = { path = "../pbh-i18n" }
pbh-rules = { path = "../pbh-rules" }
pbh-downloader = { path = "../pbh-downloader" }
pbh-geoip = { path = "../pbh-geoip" }
pbh-engine = { path = "../pbh-engine" }
pbh-btn = { path = "../pbh-btn" }
pbh-web = { path = "../pbh-web" }
pbh-notify = { path = "../pbh-notify" }
