[package]
name = "pbh-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pbh"
path = "src/main.rs"

# 组合根。M0：装配 配置 + SQLite + 日志 + AppContext。
# 后续里程碑按需加 pbh-rules/downloader/geoip/engine/btn/web 依赖。
[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-config = { path = "../pbh-config" }
pbh-storage = { path = "../pbh-storage" }
pbh-downloader = { path = "../pbh-downloader" }
pbh-engine = { path = "../pbh-engine" }
pbh-geoip = { path = "../pbh-geoip" }
pbh-net = { path = "../pbh-net" }
pbh-btn = { path = "../pbh-btn" }
pbh-web = { path = "../pbh-web" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
getrandom = "0.2"
