[package]
name = "pbh-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
serde = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
