[package]
name = "pbh-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-config = { path = "../pbh-config" }
pbh-downloader = { path = "../pbh-downloader" }
pbh-engine = { path = "../pbh-engine" }
pbh-storage = { path = "../pbh-storage" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
