[package]
name = "pbh-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pbh-domain = { path = "../pbh-domain" }
pbh-config = { path = "../pbh-config" }
pbh-downloader = { path = "../pbh-downloader" }
pbh-engine = { path = "../pbh-engine" }
pbh-geoip = { path = "../pbh-geoip" }
pbh-net = { path = "../pbh-net" }
pbh-btn = { path = "../pbh-btn" }
pbh-storage = { path = "../pbh-storage" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

# 本机网卡枚举（getifaddrs）仅 unix 用；Windows 走 std UDP 技巧，无需此依赖。
[target.'cfg(unix)'.dependencies]
libc = "0.2"
